Version 4.2.1
- Fixed last minute bug in ORG/END which was causing it not to fcache
- Improved some warning messages for undefined symbols
- Added a number of additional peephole optimizations
- Fixed float constant calculations for calls to functions
- Fixed a spurious error about lastorg mismatch

Version 4.2.0
- Added {++cog} and {++lut} to force functions into COG or LUT
- Made ORG in Spin2 fcache the asm
- Enabled fcache by default for P2
- Moved P2 FCACHE to second half of LUT
- Changed symbol resolution so Spin symbols are case insensitive in C
- Dramatically improved parsing of large initializer lists
- Accepted large addresses for jump instructions in inline assembly.
- Fixed C builtin function definitions for _wypin, _wrpin, etc.
- Fixed some cases where user code might be optimized when it shouldn't
- Used ZEROX/SIGNX for sign extension on P2
- Improved handling of floating point constants
- Improved warning messages for indirect jumps
- Reduced namespace clutter (accidental Spin influences) in C and BASIC

Version 4.1.11
- Made _rxraw more forgiving (but slower) in P1
- No longer align P2 output to 32 bytes (matches newer PNut)
- Fixed various bugs in POSIX file functions
- Special case @ operation in REP @x, #N in inline asm

Version 4.1.10
- Added APPEND mode for open
- Added +<= and +>= aliases for +=< and +=> in Spin2
- Allow @"stuff" notation in Spin; means the same as STRING("stuff")
- Added COGCHK function
- Allowed assembly-only C and BASIC files (similar to Spin with only DAT)
- Implemented ONES, QEXP, and QLOG Spin2 operators
- Fixed a problem with negative numbers in Spin CASE statements
- Fixed bytemove, wordmove, longmove to work with overlapping extents
- Fixed a bogus name conflict with some internal variables like "_dir"
- Made OPTION EXPLICIT apply to FOR loop variables

Version 4.1.9
- Added an error for out of range immediate values in inline asm
- Fixed REG[] dereferencing