@@ -1160,6 +1160,18 @@ NormalizeFunc(AST *ast, Function *func)
         if (rdecl && AstUses(rdecl, ast))
             func->result_used = 1;
         return NULL;
+    case AST_INLINEASM:
+        // inline asm is a mess and not laid out the way lists normally are
+        // for now, punt and assume the result is used if it's explicitly declared
+        rdecl = func->resultexpr;
+        if (rdecl) {
+            if (rdecl->kind == AST_DECLARE_VAR) {
+                func->result_used = 1;
+            } else if  (rdecl->kind == AST_IDENTIFIER && strcmp(rdecl->d.string, "result")!=0 ) {
+                func->result_used = 1;
+            }
+        }
+        return NULL;
     case AST_INTEGER:
     case AST_FLOAT:
     case AST_STRING:
