@@ -4,6 +4,7 @@ Version 4.2.1
 - Added a number of additional peephole optimizations
 - Fixed float constant calculations for calls to functions
 - Fixed a spurious error about lastorg mismatch
+- Fixed use of return variables in inline assembly not adding an automatic return
 
 Version 4.2.0
 - Added {++cog} and {++lut} to force functions into COG or LUT
